dealing with layout issues for the navbar and header

--- a/app/assets/stylesheets/shared/_header.scss
+++ b/app/assets/stylesheets/shared/_header.scss
@@ -1,4 +1,5 @@
 .page-heading {
+  background-color: white;
   display: flex;
   justify-content: space-between;
   h1, h2, h3, h4, h5 {
@@ -8,7 +9,9 @@
     color: $brand-color;
   }
 }
-
+.heading-space {
+  background-color: white;
+}
 .page-heading-right {
   margin-top: 40px;
 }
