--- a/app/assets/stylesheets/shared/_navbar.scss
+++ b/app/assets/stylesheets/shared/_navbar.scss
@@ -4,9 +4,11 @@
     padding: 0;
     margin: 0, -1px;
     .hht-navbar-collapse {
-      margin-top: 105px;
+      // margin-top: 105px;
       background-color: $brand-color;
       text-align: center;
+      margin-left: -15px;
+      margin-right: -15px;
     }
       .navbar-list {
         float: none;
